--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ a {
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #ff15d6;
+  background-color: #0052ff;
   color: #f3fd04;
   text-align: center;
 }
@@ -250,57 +250,46 @@ body {
   }
 }
 
-
-@keyframes shake {
-
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-5px);
-  }
-
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(5px);
-  }
-}
-
 @keyframes changeColor {
   0% {
     color: red;
   }
 
   25% {
-    color: blue;
-  }
-
-  50% {
-    color: green;
-  }
-
-  75% {
     color: orange;
   }
 
+  50% {
+    color: yellow;
+  }
+
+  75% {
+    color: green;
+  }
+
   100% {
-    color: red;
+    color: rgb(255, 0, 221);
   }
 }
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-5px);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translateX(5px);
+  }
+}
+
 
 .burned-section a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
-  animation: changeColor 0.s infinite;
+  animation: changeColor 2s infinite;
 }
 
 .burned-section a:active {
@@ -313,8 +302,10 @@ body {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  animation: shake 0.5s ease-in-out infinite;
   max-width: 30%;
   height: auto;
+  animation: shake 0.5s ease-in-out;
 }
+
+
 
