--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ a {
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #0052ff;
+  background-color: #ff15d6;
   color: #f3fd04;
   text-align: center;
 }
